Highlight tweets with keyword (painful but successful) Build for deployment

--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,8 @@
 
       <div ng-view=""></div>
 
-      <div class="footer">
-        <p>Adaptive <span class="glyphicon glyphicon-heart"></span> Coke</p>
+      <div class="footer col-md-offset-4">
+        <p><i class="glyphicon glyphicon-tree-deciduous text-success"></i> <a href="https://github.com/mattstabeler/adaptivetweets">Source</a></p>
       </div>
     </div>
 
